--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,27 +1,28 @@
 <mat-card>
-    <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
         <mat-form-field>
             <input 
                 matInput 
                 type="text" 
-                name="title" 
-                ngModel
-                #title="ngModel"
-                placeholder="Post title"
-                required
-                minlength="3" />
-            <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+                formControlName="title"
+                placeholder="Post title" />
+            <mat-error *ngIf="form.get('title').invalid">Please enter a post title</mat-error>
         </mat-form-field>
+        <div>
+            <button mat-stroked-button type="button" (click)="filePicker.click()">Pick image</button>
+            <input type="file" #filePicker (change)="onImagePicked($event)" />
+        </div>
+        <div class="image-preview" *ngIf="imagePreview && form.get('image').valid">
+            <img [src]="imagePreview" [alt]="form.value.title" />
+        </div>
         <mat-form-field>
             <textarea 
                 matInput 
                 rows="10" 
-                name="content" 
-                ngModel
-                #content="ngModel"
-                placeholder="Post content"
-                required></textarea>
-                <mat-error *ngIf="content.invalid">Please enter post content</mat-error>
+                formControlName="content"
+                placeholder="Post content"></textarea>
+            <mat-error *ngIf="form.get('content').invalid">Please enter post content</mat-error>
         </mat-form-field> 
         <button
             mat-raised-button
