--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,13 +1,24 @@
-<mat-accordion *ngIf="posts.length > 0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-accordion *ngIf="!isLoading && posts.length > 0">
     <mat-expansion-panel *ngFor="let post of posts">
         <mat-expansion-panel-header>
             {{ post.title }}
         </mat-expansion-panel-header>
+        <div class="post-image">
+            <img [src]="post.imagePath" [alt]="post.title" />
+        </div>
         <p>{{ post.content }}</p>
-        <mat-action-row>
-            <button mat-button color="primary">EDIT</button>
-            <button mat-button color="warn">DELETE</button>
+        <mat-action-row *ngIf="userIsAuthenticated && userId === post.creator">
+            <a mat-button color="primary" [routerLink]="['/edit', post._id]">EDIT</a>
+            <button mat-button color="warn" (click)="onDelete(post._id)">DELETE</button>
         </mat-action-row>
     </mat-expansion-panel>
 </mat-accordion>
-<p class="info-text" *ngIf="posts.length <= 0">No posts added yet</p>
+<mat-paginator 
+    *ngIf="posts.length > 0"
+    [length]="totalPosts"
+    [pageSize]="postsPerPage"
+    [pageSizeOptions]="pageSizeOptions"
+    (page)="onChangedPage($event)">
+</mat-paginator>
+<p class="info-text" *ngIf="!isLoading && posts.length <= 0">No posts added yet</p>
