--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,9 @@
     <span class="spacer"></span>
     <ul>
         <li *ngIf="userIsAuthenticated">
+            <a mat-button routerLink="/clubs" routerLinkActive="mat-accent">Clubs</a>
+        </li>
+        <li *ngIf="userIsAuthenticated">
             <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
         </li>
         <li *ngIf="!userIsAuthenticated">
