--- a/src/app/clubs/club-list/club-list.component.css
+++ b/src/app/clubs/club-list/club-list.component.css
@@ -1,10 +1,22 @@
-.card-list-container {
+.tile-content {
+    height: 100%;
     width: 100%;
-    position: relative;
-
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: #ffffff;
 }
 
-.card-item {
-    width: 20%;
+.tile-image, .tile-info {
+    height: 50%;
     padding: 0.25rem;
+}
+
+img {
+    height: 100%
+}
+
+.tile-link {
+    text-decoration: none;
+    color: #ffffff;
 }
