--- a/src/app/players/player-create/player-create.component.html
+++ b/src/app/players/player-create/player-create.component.html
@@ -1,1 +1,32 @@
-<p>player-create works!</p>
+<mat-card>
+    <form [formGroup]="form" (submit)="onSavePlayer()">
+        <mat-form-field>
+            <input matInput type="text" formControlName="name" placeholder="Player name" />
+            <mat-error *ngIf="form.get('name').invalid">Please enter a player name</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Position</mat-label>
+            <mat-select formControlName="position" required>
+                <mat-option *ngFor="let position of positions$ | async" [value]="position">
+                    {{ position.name }}
+                </mat-option>
+            </mat-select>
+            <mat-error *ngFor="form.get('position').invalid">Please enter a position</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput type="number" formControlName="shirtNumber" placeholder="Player shirt number" />
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Nationality</mat-label>
+            <mat-select formControlName="nationality" required>
+                <mat-option *ngFor="let nation of nations$ | async" [value]="nation">
+                    {{ nation.name }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput type="url" formControlName="imageUrl" placeholder="Player image url" />
+        </mat-form-field>
+        <button mat-raised-button color="accent" type="submit">Save</button>
+    </form>
+</mat-card>
