--- a/src/app/clubs/club-list/club-list.component.html
+++ b/src/app/clubs/club-list/club-list.component.html
@@ -8,6 +8,7 @@
                 <p>{{ club.name }}</p>
                 <p>{{ club.venue }}</p>
                 <p>Official website: <a class="tile-link" target="_blank" [attr.href]="club.website">{{ club.website }}</a></p>
+                <a mat-button color="primary" [routerLink]="['/clubs/edit', club._id]">EDIT</a>
             </div>
         </div>
     </mat-grid-tile>
