--- a/src/app/players/player-create/player-create.component.html
+++ b/src/app/players/player-create/player-create.component.html
@@ -5,7 +5,7 @@
             <mat-error *ngIf="form.get('name').invalid">Please enter a player name</mat-error>
         </mat-form-field>
         <mat-form-field>
-            <mat-label>Position</mat-label>
+            <mat-label>Player position</mat-label>
             <mat-select formControlName="position" required>
                 <mat-option *ngFor="let position of positions$ | async" [value]="position">
                     {{ position.name }}
@@ -17,12 +17,12 @@
             <input matInput type="number" formControlName="shirtNumber" placeholder="Player shirt number" />
         </mat-form-field>
         <mat-form-field>
-            <mat-label>Nationality</mat-label>
-            <mat-select formControlName="nationality" required>
-                <mat-option *ngFor="let nation of nations$ | async" [value]="nation">
+            <input matInput type="text" formControlName="nationality" [matAutocomplete]="auto" placeholder="Player nationality" />
+            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayNationality">
+                <mat-option *ngFor="let nation of filteredNations$ | async" [value]="nation">
                     {{ nation.name }}
                 </mat-option>
-            </mat-select>
+            </mat-autocomplete>
         </mat-form-field>
         <mat-form-field>
             <input matInput type="url" formControlName="imageUrl" placeholder="Player image url" />
