--- a/src/app/players/player-list/player-list.component.html
+++ b/src/app/players/player-list/player-list.component.html
@@ -1,8 +1,8 @@
 <mat-table class="mat-elevation-z8" [dataSource]="players$ | async">
 
     <ng-container matColumnDef="imageUrl">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let player"> <img [src]="player.imageUrl" /></td>
+        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+        <mat-cell *matCellDef="let player" class="img"><img [src]="player.imageUrl" /></mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="name">
